@@ -18,7 +18,7 @@
 -->
 
 
-<project name="hcatalog" default="fatjar" xmlns:ivy="antlib:org.apache.ivy.ant" >
+<project name="hcatalog" default="jar" xmlns:ivy="antlib:org.apache.ivy.ant" >
 
   <!--
   ================================================================================
@@ -32,7 +32,7 @@
 
   <!-- hive properties -->
   <property name="hive.root" value="${basedir}/hive/external"/>
-  <property name="hive.version" value="0.8.0"/>
+  <property name="hive.version" value="0.8.0-SNAPSHOT"/>
 
   <!-- build properties -->
   <property name="lib.dir" value="${basedir}/lib/" />
@@ -110,7 +110,7 @@
 
   <path id="test.classpath">
     <pathelement location="${test.build.classes}" />
-    <pathelement location="" />
+    <pathelement location="${build.classes}" />
     <pathelement location="conf"/>
     <pathelement location="${hive.conf.dir}"/>
     <!-- jars Hive depends on -->
@@ -227,12 +227,12 @@
  
   <!-- Build the jar, this is the default -->
   <target name="fatjar" depends="compile-src">
-     <jar jarfile="${hcatalog.jar}" basedir="${build.classes}">
+     <jar jarfile="${build.dir}/${ant.project.name}/${hcatalog.jar}" basedir="${build.classes}">
         <zipgroupfileset dir="${hive.root}/lib" includes="thrift-fb303-${thrift-fb303.version}.jar,thrift-${thrift.version}.jar,commons-lang-2.4.jar,derby.jar"/> 
-        <zipgroupfileset dir="${hive.root}/metastore" includes="hive-metastore-${version}.jar"/> 
-        <zipgroupfileset dir="${hive.root}/ql" includes="hive-exec-${version}.jar"/> 
-        <zipgroupfileset dir="${hive.root}/common" includes="hive-common-${version}.jar"/> 
-        <zipgroupfileset dir="${hive.root}/serde" includes="hive-serde-${version}.jar"/> 
+        <zipgroupfileset dir="${hive.root}/build/metastore" includes="hive-metastore-${hive.version}.jar"/> 
+        <zipgroupfileset dir="${hive.root}/build/ql" includes="hive-exec-${hive.version}.jar"/> 
+        <zipgroupfileset dir="${hive.root}/build/common" includes="hive-common-${hive.version}.jar"/> 
+        <zipgroupfileset dir="${hive.root}/build/serde" includes="hive-serde-${hive.version}.jar"/> 
     </jar>
   </target>
 
@@ -245,8 +245,15 @@
   <target name="server-extensions" depends="compile-src">
      <jar jarfile="${build.dir}/${ant.project.name}/${final.name}-server-extensions.jar" basedir="${build.classes}"
  	  includes="org/apache/hcatalog/listener/**,org/apache/hcatalog/metadata/**">
- </jar>
+  </jar>
   </target>
+
+  <!--
+  ================================================================================
+  Build both fatjar and server-extensions
+  ================================================================================
+  -->
+  <target name="jar" depends="fatjar,server-extensions"/>
 
 
  <!--
